--- a/jserve.html
+++ b/jserve.html
@@ -622,7 +622,7 @@ function navigateItem(item, replace) {
   }
   var navpane = document.getElementById("navigation-pane");
   navpane.classList.remove("reveal");
-  document.title = item.getAttribute("name") + " - Tech Stuff";
+  document.title = item.getAttribute("name") + " - CrackThemAll";
   var icon = document.querySelector("link[rel~='icon']");
   if (!icon) {
     icon = document.createElement('link');
