--- a/jserve.html
+++ b/jserve.html
@@ -1205,6 +1205,8 @@ function getCookie(name) {
     <folder name="Desktop" icon="desktop">
     </folder>
     <folder name="Downloads" icon="downloads">
+      <folder name="Adobe" icon="adobe">
+      </folder>
     </folder>
   </folder>
   <folder name="Libraries" icon="libraries" open>
