more icon fixes

--- a/jserve.html
+++ b/jserve.html
@@ -1177,7 +1177,8 @@ function getCookie(name) {
   const value = `; ${document.cookie}`;
   const parts = value.split(`; ${name}=`);
   if (parts.length === 2) return parts.pop().split(';').shift();
-}document.addEventListener("DOMContentLoaded", function(){
+}
+document.addEventListener("DOMContentLoaded", function(){
   var folder = document.getElementById("fsroot");
   var navpane = document.getElementById("navigation-pane");
   navpane.innerHTML = "";
@@ -1202,21 +1203,23 @@ function getCookie(name) {
     </folder>
     <folder name="Downloads" icon="downloads">
       <folder name="Adobe" icon="adobe">
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Acrobat3D_CS2_EN.exe" icon="adobe_extractor" name="Acrobat3D_CS2_EN.exe"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AcrobatPro_CS2_EN.exe" icon="adobe_extractor" name="AcrobatPro_CS2_EN.exe"></link>
-        <link href="https://archive.org/download/after-effects-cs2-CEA/AfterEffects_CS2_MU.exe" icon="adobe_extractor" name="AfterEffects_CS2_EN.exe"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Audition_2.0_EN.exe" icon="adobe_extractor" name="Audition_2.0_EN.exe"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Encore_CS2_MU.exe" icon="adobe_extractor" name="Encore_CS2_MU.exe"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/GoLive_CS2_EN.exe" icon="adobe_extractor" name="GoLive_CS2_EN.exe"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Illustrator_CS2_EN.exe" icon="adobe_extractor" name="Illustrator_CS2_EN.exe"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/InCopy_CS2_EN.exe" icon="adobe_extractor" name="InCopy_CS2_EN.exe"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/InDesign_CS2_EN.exe" icon="adobe_extractor" name="InDesign_CS2_EN.exe"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Macromedia.Contribute.3.11.msi" icon="msi" name="Macromedia Contribute 3.11.msi"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Macromedia.Dreamweaver.8.0.2.msi" icon="msi" name="Macromedia Dreamweaver 8.0.2.msi"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Macromedia.Fireworks.8.msi" icon="msi" name="Macromedia Fireworks 8.msi"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Macromedia.Flash.8.msi" icon="msi" name="Macromedia Flash 8.msi"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Photoshop_CS2_EN.exe" icon="adobe_extractor" name="Photoshop_CS2_EN.exe"></link>
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/PremierePro_CS2_MU.exe" icon="adobe_extractor" name="PremierePro_CS2_MU.exe"></link>
+        <folder name="Creative Suite 2" icon="adobe-cs2">
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Acrobat3D_CS2_EN.exe" icon="adobe_extractor" name="Acrobat3D_CS2_EN.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AcrobatPro_CS2_EN.exe" icon="adobe_extractor" name="AcrobatPro_CS2_EN.exe"></link>
+          <link href="https://archive.org/download/after-effects-cs2-CEA/AfterEffects_CS2_MU.exe" icon="adobe_extractor" name="AfterEffects_CS2_EN.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Audition_2.0_EN.exe" icon="adobe_extractor" name="Audition_2.0_EN.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Encore_CS2_MU.exe" icon="adobe_extractor" name="Encore_CS2_MU.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/GoLive_CS2_EN.exe" icon="adobe_extractor" name="GoLive_CS2_EN.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Illustrator_CS2_EN.exe" icon="adobe_extractor" name="Illustrator_CS2_EN.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/InCopy_CS2_EN.exe" icon="adobe_extractor" name="InCopy_CS2_EN.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/InDesign_CS2_EN.exe" icon="adobe_extractor" name="InDesign_CS2_EN.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Macromedia.Contribute.3.11.msi" icon="msi" name="Macromedia Contribute 3.11.msi"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Macromedia.Dreamweaver.8.0.2.msi" icon="msi" name="Macromedia Dreamweaver 8.0.2.msi"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Macromedia.Fireworks.8.msi" icon="msi" name="Macromedia Fireworks 8.msi"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Macromedia.Flash.8.msi" icon="msi" name="Macromedia Flash 8.msi"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Photoshop_CS2_EN.exe" icon="adobe_extractor" name="Photoshop_CS2_EN.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/PremierePro_CS2_MU.exe" icon="adobe_extractor" name="PremierePro_CS2_MU.exe"></link>
+        </folder>
       </folder>
     </folder>
   </folder>
