--- a/jserve.html
+++ b/jserve.html
@@ -1219,6 +1219,7 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Macromedia.Flash.8.msi" icon="msi" name="Macromedia Flash 8.msi"></link>
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Photoshop_CS2_EN.exe" icon="adobe_extractor" name="Photoshop_CS2_EN.exe"></link>
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/PremierePro_CS2_MU.exe" icon="adobe_extractor" name="PremierePro_CS2_MU.exe"></link>
+          <rtf docid="adobe-cs2-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
       </folder>
     </folder>
@@ -1253,6 +1254,11 @@ document.addEventListener("DOMContentLoaded", function(){
   <folder name="Network" icon="network" open>
   </folder>
 </folder>
+
+<rtf id="rtf-adobe-cs2-readme">
+  <div>Encore 2.0: 1119-1043-2574-1418-3000-0922</div>
+  <div>Macromedia Studio 8: WPD800-59139-91232-15201</div>
+</rtf>
 
 <div id="command-bar"></div>
 <div id="vertical-pane-content">
