--- a/jserve.html
+++ b/jserve.html
@@ -613,6 +613,11 @@ template {
 .notepad-doc {
   padding: 4px;
   overflow: scroll;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  resize: none;
+  margin: 0;
 }
 </style>
 <!--[if IE]>
