fix doc contents

--- a/jserve.html
+++ b/jserve.html
@@ -1270,8 +1270,8 @@ document.addEventListener("DOMContentLoaded", function(){
 
 <template id="rtf-adobe-cs2-readme">
   <textarea class="notepad-doc">
-    Encore 2.0: 1119-1043-2574-1418-3000-0922<br>
-    Macromedia Studio 8: WPD800-59139-91232-15201<br>
+Encore 2.0: 1119-1043-2574-1418-3000-0922
+Macromedia Studio 8: WPD800-59139-91232-15201
   </textarea>
 </template>
 
