--- a/jserve.html
+++ b/jserve.html
@@ -1234,6 +1234,11 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/PremierePro_CS2_MU.exe" icon="adobe_extractor" name="PremierePro_CS2_MU.exe"></link>
           <rtf docid="adobe-cs2-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
+        <folder name="Creative Suite 3" icon="adobe-cs3">
+          <link href="https://archive.org/download/adbestamcs3_wwe-CEA/ADBESTAMCS3_WWE.exe" icon="adobe_extractor" name="ADBESTAMCS3_WWE.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Audition_3.0_MU.exe" icon="adobe_extractor" name="Audition_3.0_MU.exe"></link>
+          <rtf docid="adobe-cs3-readme" name="readme.txt" icon="txt"></rtf>
+        </folder>
       </folder>
     </folder>
   </folder>
@@ -1272,7 +1277,14 @@ document.addEventListener("DOMContentLoaded", function(){
   <textarea class="notepad-doc">
 Encore 2.0: 1119-1043-2574-1418-3000-0922
 Macromedia Studio 8: WPD800-59139-91232-15201
-  </textarea>
+</textarea>
+</template>
+
+<template id="rtf-adobe-cs4-readme">
+  <textarea class="notepad-doc">
+Director 11.5: 1190-1057-5172-6338-7181-3733
+CS4 Master Collection: 1325-1193-3144-1295-1933-9327
+</textarea>
 </template>
 
 <div id="command-bar"></div>
