--- a/jserve.html
+++ b/jserve.html
@@ -1238,6 +1238,14 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://archive.org/download/adbestamcs3_wwe-CEA/ADBESTAMCS3_WWE.exe" icon="adobe_extractor" name="ADBESTAMCS3_WWE.exe"></link>
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Audition_3.0_MU.exe" icon="adobe_extractor" name="Audition_3.0_MU.exe"></link>
         </folder>
+        <folder name="Creative Suite 4" icon="adobe-cs4">
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/ADBESTAMCS4_LS1.exe" icon="adobe_extractor_cs4" name="ADBESTAMCS4_LS1.exe"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/ADBESTAMCS4_LS1.7z" icon="7z" name="ADBESTAMCS4_LS1.7z"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/ADBESTAMCS4_LS4.exe" icon="adobe_extractor_cs4" name="ADBESTAMCS4_LS4.exe"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/ADBESTAMCS4_LS4.7z" icon="7z" name="ADBESTAMCS4_LS4.7z"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Director11.5.exe" icon="adobe_extractor_cs4" name="Director11.5.exe"></link>
+          <rtf docid="adobe-cs4-readme" name="readme.txt" icon="txt"></rtf>
+        </folder>
       </folder>
     </folder>
   </folder>
