--- a/jserve.html
+++ b/jserve.html
@@ -1241,8 +1241,10 @@ document.addEventListener("DOMContentLoaded", function(){
         <folder name="Creative Suite 4" icon="adobe-cs4">
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/ADBESTAMCS4_LS1.exe" icon="adobe_extractor_cs4" name="ADBESTAMCS4_LS1.exe"></link>
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/ADBESTAMCS4_LS1.7z" icon="7z" name="ADBESTAMCS4_LS1.7z"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/STAMCS4_Cont_LS1.exe" icon="adobe_extractor_cs4" name="STAMCS4_Cont_LS1.exe"></link>
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/ADBESTAMCS4_LS4.exe" icon="adobe_extractor_cs4" name="ADBESTAMCS4_LS4.exe"></link>
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/ADBESTAMCS4_LS4.7z" icon="7z" name="ADBESTAMCS4_LS4.7z"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/STAMCS4_Cont_LS4.exe" icon="adobe_extractor_cs4" name="STAMCS4_Cont_LS4.exe"></link>
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Director11.5.exe" icon="adobe_extractor_cs4" name="Director11.5.exe"></link>
           <rtf docid="adobe-cs4-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
@@ -1289,6 +1291,14 @@ Macromedia Studio 8: WPD800-59139-91232-15201
 
 <template id="rtf-adobe-cs4-readme">
   <textarea class="notepad-doc">
+ADBESTAMCS4_LS1.7z: CS4 Master Collection, English
+ADBESTAMCS4_LS1.exe: CS4 Master Collection Extractor, English
+STAMCS4_Cont_LS1.exe: CS4 Master Collection Additional Content, English
+
+ADBESTAMCS4_LS4.7z: CS4 Master Collection, Western Europe
+ADBESTAMCS4_LS4.exe: CS4 Master Collection Extractor, Western Europe
+STAMCS4_Cont_LS4.exe: CS4 Master Collection Additional Content, Western Europe
+
 Director 11.5: 1190-1057-5172-6338-7181-3733
 CS4 Master Collection: 1325-1193-3144-1295-1933-9327
 </textarea>
