--- a/jserve.html
+++ b/jserve.html
@@ -1248,6 +1248,17 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Director11.5.exe" icon="adobe_extractor_cs4" name="Director11.5.exe"></link>
           <rtf docid="adobe-cs4-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
+        <folder name="Creative Suite 5" icon="adobe-cs5">
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5/win32/MasterCollection_CS5_LS1.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_LS1.exe"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5/win32/MasterCollection_CS5_LS1.7z" icon="7z" name="MasterCollection_CS5_LS1.7z"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5/win32/MasterCollection_CS5_LS4.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_LS4.exe"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5/win32/MasterCollection_CS5_LS4.7z" icon="7z" name="MasterCollection_CS5_LS4.7z"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS1.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_5_LS1.exe">
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS1.7z" icon="7z" name="MasterCollection_CS5_5_LS1.7z">
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS4.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_5_LS4.exe">
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS4.7z" icon="7z" name="MasterCollection_CS5_5_LS4.7z">
+          <rtf docid="adobe-cs5-readme" name="readme.txt" icon="txt"></rtf>
+        </folder>
       </folder>
     </folder>
   </folder>
@@ -1291,16 +1302,28 @@ Macromedia Studio 8: WPD800-59139-91232-15201
 
 <template id="rtf-adobe-cs4-readme">
   <textarea class="notepad-doc">
-ADBESTAMCS4_LS1.7z: CS4 Master Collection, English
-ADBESTAMCS4_LS1.exe: CS4 Master Collection Extractor, English
-STAMCS4_Cont_LS1.exe: CS4 Master Collection Additional Content, English
-
-ADBESTAMCS4_LS4.7z: CS4 Master Collection, Western Europe
-ADBESTAMCS4_LS4.exe: CS4 Master Collection Extractor, Western Europe
-STAMCS4_Cont_LS4.exe: CS4 Master Collection Additional Content, Western Europe
+ADBESTAMCS4_LS1.7z     CS4 Master Collection                      English
+ADBESTAMCS4_LS1.exe    CS4 Master Collection Extractor            English
+STAMCS4_Cont_LS1.exe   CS4 Master Collection Additional Content   English
+ADBESTAMCS4_LS4.7z     CS4 Master Collection                      Western Europe
+ADBESTAMCS4_LS4.exe    CS4 Master Collection Extractor            Western Europe
+STAMCS4_Cont_LS4.exe   CS4 Master Collection Additional Content   Western Europe
 
 Director 11.5: 1190-1057-5172-6338-7181-3733
 CS4 Master Collection: 1325-1193-3144-1295-1933-9327
+</textarea>
+</template>
+
+<template id="rtf-adobe-cs4-readme">
+  <textarea class="notepad-doc">
+MasterCollection_CS5_LS1.7z    CS5 Master Collection               English
+MasterCollection_CS5_LS1.exe   CS5 Master Collection Extractor     English
+MasterCollection_CS5_LS4.7z    CS5 Master Collection               Western Europe
+MasterCollection_CS5_LS4.exe   CS5 Master Collection Extractor     Western Europe
+MasterCollection_CS5_LS1.7z    CS5.5 Master Collection             English
+MasterCollection_CS5_LS1.exe   CS5.5 Master Collection Extractor   English
+MasterCollection_CS5_LS4.7z    CS5.5 Master Collection             Western Europe
+MasterCollection_CS5_LS4.exe   CS5.5 Master Collection Extractor   Western Europe
 </textarea>
 </template>
 
