add updates for dir11.5

--- a/jserve.html
+++ b/jserve.html
@@ -1246,6 +1246,7 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/ADBESTAMCS4_LS4.7z" icon="7z" name="ADBESTAMCS4_LS4.7z"></link>
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/Applications/MastCol/CS4/Win/STAMCS4_Cont_LS4.exe" icon="adobe_extractor_cs4" name="STAMCS4_Cont_LS4.exe"></link>
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Director11.5.exe" icon="adobe_extractor_cs4" name="Director11.5.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Director-11.5.9.zip" icon="zip" name="Director-11.5.9.zip"></link>
           <rtf docid="adobe-cs4-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
         <folder name="Creative Suite 5" icon="adobe-cs5">
@@ -1295,27 +1296,68 @@ document.addEventListener("DOMContentLoaded", function(){
 
 <template id="rtf-adobe-cs2-readme">
   <textarea class="notepad-doc">
-Encore 2.0: 1119-1043-2574-1418-3000-0922
-Macromedia Studio 8: WPD800-59139-91232-15201
+--- Serials ---
+Encore 2.0           1119-1043-2574-1418-3000-0922
+Macromedia Studio 8  WPD800-59139-91232-15201
+
+-- Notes --
+To install the CS2 updates:
+1. Set the system clock back to 2010
+2. Open Photoshop
+3. Press Help -> Updates
+4. Install one update
+5. Repeat steps 3 and 4 until all updates are installed
+6. Set the system clock to the real date again
+</textarea>
+</template>
+
+<template id="rtf-adobe-cs3-readme">
+  <textarea class="notepad-doc">
+--- Files ---
+ADBESTAMCS3_WWE.exe   CS3 Master Collection   English
+Audition_3.0_MU.exe   Audition CS3            English and Western Europe
+
+-- Notes --
+To install the CS3 updates:
+1. Set the system clock back to 2010
+2. Open Photoshop
+3. Press Help -> Updates
+4. Install all the updates
+5. Set the system clock to the real date again
 </textarea>
 </template>
 
 <template id="rtf-adobe-cs4-readme">
   <textarea class="notepad-doc">
+--- Files ---
 ADBESTAMCS4_LS1.7z     CS4 Master Collection                      English
 ADBESTAMCS4_LS1.exe    CS4 Master Collection Extractor            English
 STAMCS4_Cont_LS1.exe   CS4 Master Collection Additional Content   English
 ADBESTAMCS4_LS4.7z     CS4 Master Collection                      Western Europe
 ADBESTAMCS4_LS4.exe    CS4 Master Collection Extractor            Western Europe
 STAMCS4_Cont_LS4.exe   CS4 Master Collection Additional Content   Western Europe
+Director11.5.exe       Director 11.5                              English
+Director-11.5.9.zip    Director 11.5.9 Update for Director 11.5   English
 
-Director 11.5: 1190-1057-5172-6338-7181-3733
-CS4 Master Collection: 1325-1193-3144-1295-1933-9327
+--- Serials ---
+Director 11.5          1190-1057-5172-6338-7181-3733
+CS4 Master Collection  1325-1193-3144-1295-1933-9327
+
+-- Notes --
+To install the CS4 updates:
+1. Set the system clock back to 2010
+2. Open Photoshop
+3. Press Help -> Updates
+4. Install all the updates
+5. Set the system clock to the real date again
+
+Adobe Director 11.5 must be updated manually using the update files available here.
 </textarea>
 </template>
 
 <template id="rtf-adobe-cs5-readme">
   <textarea class="notepad-doc">
+--- Files ---
 MasterCollection_CS5_LS1.7z    CS5 Master Collection               English
 MasterCollection_CS5_LS1.exe   CS5 Master Collection Extractor     English
 MasterCollection_CS5_LS4.7z    CS5 Master Collection               Western Europe
@@ -1324,6 +1366,16 @@ MasterCollection_CS5_LS1.7z    CS5.5 Master Collection             English
 MasterCollection_CS5_LS1.exe   CS5.5 Master Collection Extractor   English
 MasterCollection_CS5_LS4.7z    CS5.5 Master Collection             Western Europe
 MasterCollection_CS5_LS4.exe   CS5.5 Master Collection Extractor   Western Europe
+
+--- Serials ---
+CS5 Master Collection          1325-1594-8673-7917-8119-6942
+
+
+-- Notes --
+To install the CS5 updates:
+1. Open Photoshop
+2. Press Help -> Updates
+3. Install all the updates
 </textarea>
 </template>
 
