--- a/jserve.html
+++ b/jserve.html
@@ -1258,6 +1258,7 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS1.7z" icon="7z" name="MasterCollection_CS5_5_LS1.7z">
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS4.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_5_LS4.exe">
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS4.7z" icon="7z" name="MasterCollection_CS5_5_LS4.7z">
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe">
           <rtf docid="adobe-cs5-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
       </folder>
