--- a/jserve.html
+++ b/jserve.html
@@ -1359,18 +1359,21 @@ Adobe Director 11.5 must be updated manually using the update files available he
 <template id="rtf-adobe-cs5-readme">
   <textarea class="notepad-doc">
 --- Files ---
-MasterCollection_CS5_LS1.7z    CS5 Master Collection               English
-MasterCollection_CS5_LS1.exe   CS5 Master Collection Extractor     English
-MasterCollection_CS5_LS4.7z    CS5 Master Collection               Western Europe
-MasterCollection_CS5_LS4.exe   CS5 Master Collection Extractor     Western Europe
+MasterCollection_CS5_LS1.7z    CS5.0 Master Collection             English
+MasterCollection_CS5_LS1.exe   CS5.0 Master Collection Extractor   English
+MasterCollection_CS5_LS4.7z    CS5.0 Master Collection             Western Europe
+MasterCollection_CS5_LS4.exe   CS5.0 Master Collection Extractor   Western Europe
 MasterCollection_CS5_LS1.7z    CS5.5 Master Collection             English
 MasterCollection_CS5_LS1.exe   CS5.5 Master Collection Extractor   English
 MasterCollection_CS5_LS4.7z    CS5.5 Master Collection             Western Europe
 MasterCollection_CS5_LS4.exe   CS5.5 Master Collection Extractor   Western Europe
+AdobeGenP.exe                  Adobe Generic Patcher v3k.0.10
 
 --- Serials ---
 CS5 Master Collection          1325-1594-8673-7917-8119-6942
 
+--- Activation ---
+After installation, run AdobeGenP.exe, press Search, then press Patch.
 
 -- Notes --
 To install the CS5 updates:
