--- a/jserve.html
+++ b/jserve.html
@@ -1370,16 +1370,19 @@ MasterCollection_CS5_LS4.exe   CS5.5 Master Collection Extractor   Western Europ
 AdobeGenP.exe                  Adobe Generic Patcher v3k.0.10
 
 --- Serials ---
-CS5 Master Collection          1325-1594-8673-7917-8119-6942
+CS5.0 Master Collection        1325-1594-8673-7917-8119-6942
+CS5.5 Master Collection        ????-????-????-????-????-???? (will add later)
 
 --- Activation ---
 After installation, run AdobeGenP.exe, press Search, then press Patch.
 
 -- Notes --
 To install the CS5 updates:
-1. Open Photoshop
-2. Press Help -> Updates
-3. Install all the updates
+1. Set the system clock back to 2010
+2. Open Photoshop
+3. Press Help -> Updates
+4. Install all the updates
+5. Set the system clock to the real date again
 </textarea>
 </template>
 
