--- a/jserve.html
+++ b/jserve.html
@@ -1371,7 +1371,7 @@ AdobeGenP.exe                  Adobe Generic Patcher v3k.0.10
 
 --- Serials ---
 CS5.0 Master Collection        1325-1594-8673-7917-8119-6942
-CS5.5 Master Collection        ????-????-????-????-????-???? (will add later)
+CS5.5 Master Collection        1325-1002-9088-4094-1756-3666
 
 --- Activation ---
 After installation, run AdobeGenP.exe, press Search, then press Patch.
