--- a/jserve.html
+++ b/jserve.html
@@ -1261,6 +1261,9 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe">
           <rtf docid="adobe-cs5-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
+        <folder name="Creative Suite 6" icon="adobe-cs6">
+          <rtf docid="adobe-cs6-readme" name="readme.txt" icon="txt"></rtf>
+        </folder>
       </folder>
     </folder>
   </folder>
@@ -1383,6 +1386,12 @@ To install the CS5 updates:
 3. Press Help -> Updates
 4. Install all the updates
 5. Set the system clock to the real date again
+</textarea>
+</template>
+
+<template id="rtf-adobe-cs6-readme">
+  <textarea class="notepad-doc">
+Coming soon!
 </textarea>
 </template>
 
