update patcher, add director

--- a/jserve.html
+++ b/jserve.html
@@ -1254,14 +1254,20 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5/win32/MasterCollection_CS5_LS1.7z" icon="7z" name="MasterCollection_CS5_LS1.7z"></link>
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5/win32/MasterCollection_CS5_LS4.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_LS4.exe"></link>
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5/win32/MasterCollection_CS5_LS4.7z" icon="7z" name="MasterCollection_CS5_LS4.7z"></link>
-          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS1.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_5_LS1.exe">
-          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS1.7z" icon="7z" name="MasterCollection_CS5_5_LS1.7z">
-          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS4.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_5_LS4.exe">
-          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS4.7z" icon="7z" name="MasterCollection_CS5_5_LS4.7z">
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS1.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_5_LS1.exe"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS1.7z" icon="7z" name="MasterCollection_CS5_5_LS1.7z"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS4.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_5_LS4.exe"></link>
+          <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS4.7z" icon="7z" name="MasterCollection_CS5_5_LS4.7z"></link>
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe">
           <rtf docid="adobe-cs5-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
         <folder name="Creative Suite 6" icon="adobe-cs6">
+          <link href="http://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS6/win32/MasterCollection_CS6_LS16.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS6_LS16.exe"></link>
+          <link href="http://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS6/win32/MasterCollection_CS6_LS16.7z" icon="7z" name="MasterCollection_CS6_LS16.7z"></link>
+          <link href="http://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS6/win32/MasterCollection_CS6_LS4.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS6_LS4.exe"></link>
+          <link href="http://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS6/win32/MasterCollection_CS6_LS4.7z" icon="7z" name="MasterCollection_CS6_LS4.7z"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Adobe.Director.12.0.exe" icon="adobe_extractor_cs4" name="Adobe.Director.12.0.exe">
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe">
           <rtf docid="adobe-cs6-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
       </folder>
@@ -1370,7 +1376,7 @@ MasterCollection_CS5_LS1.7z    CS5.5 Master Collection             English
 MasterCollection_CS5_LS1.exe   CS5.5 Master Collection Extractor   English
 MasterCollection_CS5_LS4.7z    CS5.5 Master Collection             Western Europe
 MasterCollection_CS5_LS4.exe   CS5.5 Master Collection Extractor   Western Europe
-AdobeGenP.exe                  Adobe Generic Patcher v3k.0.10
+AdobeGenP.exe                  Adobe Generic Patcher v3k.0.11
 
 --- Serials ---
 CS5.0 Master Collection        1325-1594-8673-7917-8119-6942
@@ -1391,7 +1397,36 @@ To install the CS5 updates:
 
 <template id="rtf-adobe-cs6-readme">
   <textarea class="notepad-doc">
-Coming soon!
+--- Files ---
+MasterCollection_CS6_LS16.7z   CS6 Master Collection             English
+MasterCollection_CS6_LS16.exe  CS6 Master Collection Extractor   English
+MasterCollection_CS6_LS4.7z    CS6 Master Collection             Western Europe
+MasterCollection_CS6_LS4.exe   CS6 Master Collection Extractor   Western Europe
+Adobe.Director.12.0.exe        Director 12.0                     English
+AdobeGenP.exe                  Adobe Generic Patcher v3k.0.11
+
+-- Notes --
+To install any CS6 package:
+1. Download the package (and the corresponding extractor, if any).
+2. Run the extractor
+3. Turn off internet
+4. Select Install - I have a serial number
+5. Press Sign in -> Connect Later
+6. Enter the serial 1111-1111-1111-1111-1111-1111
+   (universal serial for installing any CS6 package)
+7. Press Next -> Connect Later
+8. Turn on internet again
+9. Select components you want and press install
+10. Wait for installation to complete
+11. Download and run AdobeGenP.exe
+12. Press Search, then press Patch
+13. Done! You can now close and delete AdobeGenP, and
+    delete any packages, extractors, or extracted files.
+
+To install the CS6 updates:
+1. Open Photoshop or Director
+2. Press Help -> Updates
+3. Install all the updates
 </textarea>
 </template>
 
