--- a/jserve.html
+++ b/jserve.html
@@ -1258,7 +1258,7 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS1.7z" icon="7z" name="MasterCollection_CS5_5_LS1.7z"></link>
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS4.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS5_5_LS4.exe"></link>
           <link href="https://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS5_5/win32/MasterCollection_CS5_5_LS4.7z" icon="7z" name="MasterCollection_CS5_5_LS4.7z"></link>
-          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe">
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe"></link>
           <rtf docid="adobe-cs5-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
         <folder name="Creative Suite 6" icon="adobe-cs6">
@@ -1267,9 +1267,14 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="http://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS6/win32/MasterCollection_CS6_LS4.exe" icon="adobe_extractor_cs4" name="MasterCollection_CS6_LS4.exe"></link>
           <link href="http://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/STAM/CS6/win32/MasterCollection_CS6_LS4.7z" icon="7z" name="MasterCollection_CS6_LS4.7z"></link>
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/Adobe.Director.12.0.exe" icon="adobe_extractor_cs4" name="Adobe.Director.12.0.exe">
-          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe">
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe"></link>
           <rtf docid="adobe-cs6-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
+        <folder name="Creative Cloud 2018" icon="adobe-cs6">
+        </folder>
+      </folder>
+      <folder name="Hex-Rays" icon="hexrays">
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/ida-pro/ida-pro_91_x64win.exe" icon="ida" name="ida-pro_91_x64win.exe"></link>
       </folder>
     </folder>
   </folder>
