--- a/jserve.html
+++ b/jserve.html
@@ -1276,6 +1276,10 @@ document.addEventListener("DOMContentLoaded", function(){
       <folder name="Hex-Rays" icon="hexrays">
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/ida-pro/ida-pro_91_x64win.exe" icon="ida" name="ida-pro_91_x64win.exe"></link>
       </folder>
+      <folder name="Microsoft" icon="microsoft">
+        <folder name="Office" icon="microsoft-office">
+        </folder>
+      </folder>
     </folder>
   </folder>
   <folder name="Libraries" icon="libraries" open>
