--- a/jserve.html
+++ b/jserve.html
@@ -1278,6 +1278,8 @@ document.addEventListener("DOMContentLoaded", function(){
       </folder>
       <folder name="Microsoft" icon="microsoft">
         <folder name="Office" icon="microsoft-office">
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/microsoft-office/en_office_11.0.8453.0_fullsuite.exe" icon="microsoft-office-2003" name="en_office_11.0.8453.0_fullsuite.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/microsoft-office/en_office_14.0.7268.5000.fullsuite_x64.exe" icon="microsoft-office-2003" name="en_office_14.0.7268.5000_fullsuite_x64.exe"></link>
         </folder>
       </folder>
     </folder>
